[package]
name = "shm-bridge"
version = "0.1.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
description = "Shared memory bridge for Wine/Proton and Linux apps."
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = { version = "3.4.2", features = ["termination"] }
nom = "7.1.3"
windows = { version = "0.52.0", features = [
   "Wdk_System_SystemServices",
   "Win32_Foundation",
   "Win32_Security",
   "Win32_Storage_FileSystem",
   "Win32_System_Memory",
]}
